create new idea function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/reset.css" media="screen" title="styles" charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" media="screen" title="styles" charset="utf-8">
+    <link rel="stylesheet" href="css/styles.css" media="screen" title="styles" charset="utf-8">
   </head>
     <header>
       <h1>ideabox</h1>
@@ -18,10 +18,10 @@
       </form>
     </header>
   <body>
+    <form class="search-form">
+      <input type="text" class="search-input" placeholder="Search">
+    </form>
     <section class="idea-container">
-      <form class="search-form">
-        <input type="text" class="search-ideas" placeholder="Search">
-      </form>  
     </section>
     <script src="scripts/jquery.js"></script>
     <script src="scripts/script.js"></script>
