--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" media="screen" title="styles" charset="utf-8">
   </head>
-    <header>
+    <header class="idea-input-header">
       <h1><em>idea</em>box</h1>
       <form class="new-idea-form">
         <input type="text" class="title-input" placeholder="Title">
