--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/styles.css" media="screen" title="styles" charset="utf-8">
   </head>
     <header class="idea-input-header">
-      <h1><em>idea</em>box</h1>
+      <h1><span>idea</span>box</h1>
       <form class="new-idea-form">
         <input type="text" class="title-input" placeholder="Title">
         <input type="text" class="body-input" placeholder="Body">
