make layout responsive and mobile-friendly

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1><span>idea</span>box</h1>
       <form class="new-idea-form">
         <input type="text" class="title-input" placeholder="Title">
-        <input type="text" class="body-input" placeholder="Body">
+        <textarea rows="1" wrap="hard" class="body-input" placeholder="Body"></textarea>
         <button class="save-button" type="button">save</button>
       </form>
     </header>
