--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <form class="search-form">
       <input type="text" class="search-input" placeholder="Search">
     </form>
+    <section class="sort-ideas">
+    <secton class="sort">
+      <p>Sort idea qualities by:</p>
+      <button class="sort-button" type="button">High-Low</button>
+    </section>  
+    </section>
     <section class="idea-container">
     </section>
     <script src="scripts/jquery.js"></script>
