--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Idea Box</title>
-    <link rel="stylesheet" href="css/reset.css" media="screen" title="styles" charset="utf-8">
+    <link rel="stylesheet" href="CSS/reset.css" media="screen" title="styles" charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css" media="screen" title="styles" charset="utf-8">
+    <link rel="stylesheet" href="CSS/styles.css" media="screen" title="styles" charset="utf-8">
   </head>
     <header class="idea-input-header">
       <h1><span>idea</span>box</h1>
@@ -25,7 +25,7 @@
     <secton class="sort">
       <p>Sort idea qualities by:</p>
       <button class="sort-button" type="button">High-Low</button>
-    </section>  
+    </section>
     </section>
     <section class="idea-container">
     </section>
