make small syntax changes

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <input type="text" class="search-input" placeholder="Search">
     </form>
     <section class="sort-ideas">
-    <secton class="sort">
+    <section class="sort">
       <p>Sort idea qualities by:</p>
       <button class="sort-button" type="button">High-Low</button>
-    </section>  
+    </section>
     </section>
     <section class="idea-container">
     </section>
