--- a/index.html
+++ b/index.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Idea Box</title>
-    <link rel="stylesheet" href="css/reset.css" media="screen" title="styles" charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css" media="screen" title="styles" charset="utf-8">
-  </head>
+
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>Idea Box</title>
+        <link rel="stylesheet" href="css/reset.css" media="screen" title="styles" charset="utf-8">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link rel="stylesheet" href="css/styles.css" media="screen" title="styles" charset="utf-8">``
+    </head>
+
     <header class="idea-input-header">
-      <h1><span>idea</span>box</h1>
-      <form class="new-idea-form">
-        <input type="text" class="title-input" placeholder="Title">
-        <textarea rows="1" wrap="hard" class="body-input" placeholder="Body"></textarea>
-        <button class="save-button" type="button">save</button>
-      </form>
+        <h1><span>idea</span>box</h1>
+        <form class="new-idea-form">
+            <input type="text" class="title-input" placeholder="Title">
+            <textarea rows="1" wrap="hard" class="body-input" placeholder="Body"></textarea>
+            <button class="save-button" type="button">save</button>
+        </form>
     </header>
-  <body>
-    <form class="search-form">
-      <input type="text" class="search-input" placeholder="Search">
-    </form>
-    <section class="sort-ideas">
-    <secton class="sort">
-      <p>Sort idea qualities by:</p>
-      <button class="sort-button" type="button">High-Low</button>
-    </section>  
-    </section>
-    <section class="idea-container">
-    </section>
-    <script src="scripts/jquery.js"></script>
-    <script src="scripts/script.js"></script>
-  </body>
+
+    <body>
+        <form class="search-form">
+            <input type="text" class="search-input" placeholder="Search">
+        </form>
+        <section class="sort-ideas">
+            <secton class="sort">
+                <p>Sort idea qualities by:</p>
+                <button class="sort-button" type="button">High-Low</button>
+        </section>
+        </section>
+        <section class="idea-container">
+        </section>
+        <script src="scripts/jquery.js"></script>
+        <script src="scripts/script.js"></script>
+    </body>
+
 </html>
