--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Idea Box</title>
-        <link rel="stylesheet" href="css/reset.css" media="screen" title="styles" charset="utf-8">
+        <link rel="stylesheet" href="CSS/reset.css" media="screen" title="styles" charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <link rel="stylesheet" href="css/styles.css" media="screen" title="styles" charset="utf-8">``
+        <link rel="stylesheet" href="CSS/styles.css" media="screen" title="styles" charset="utf-8">
     </head>
 
     <header class="idea-input-header">
